# SelfCraftUpgrade

./: .gitignore  CMakeLists.txt  EXAMPLES.md  INTEGRATION.md  LICENSE  README.md  TESTING.md
conf/: SelfCraftUpgrade.conf.dist
sql/characters/: cleanup.sql  selfcraft_upgrade.sql
src/: SelfCraftUpgrade.cpp
